assets/css/style.css
* {
  box-sizing: border-box;
  outline: none;
}

html, body {
  margin: 0;
  padding: 0;
  height: 100%;
  color: #fff;
}

h1,h2,h3,h4,h5,h5 {
  margin: 0;
}

body {
  background-color: #181818;
}

button, button:focus, button:active {
  background-color: transparent !important;
}

#nowPlayingBarContainer {
  width: 100%;
  background-color: #282828;
  position: fixed;
  bottom: 0;
  min-width: 620px;
}

#nowPlayingBar {
  display: flex;
  height: 90px;
  padding: 10px;
}

#nowPlayingLeft,
#nowPlayingRight {
  width: 30%;
  min-width: 180px;
}

#nowPlayingRight {
  position: relative;
  margin-top: 16px;
}

#nowPlayingCenter {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 40%;
  max-width: 700px;
}

#nowPlayingBar .content {
  width: 100%;
}

.playerControls .buttons {
  margin: 0 auto;
  display: table;
}

.controlButton {
  background-color: transparent;
  border: none;
  vertical-align: middle;
}

.controlButton:hover {
  cursor: pointer;
}

.controlButton img {
  width: 20px;
  height: 20px;
}

.play img,
.pause img {
  width: 32px;
  height: 32px;
}

.pause {
  display: none;
}

.progressTime {
  font-size: 11px;
  color: #a0a0a0;
  min-width: 40px;
  text-align: center;
}

.playbackBar {
  display: flex;
  width: 100%;
}

.progressBar {
  width: 100%;
  height: 12px;
  display: inline-flex;
  cursor: pointer;
  margin-top: 6px;
}

.progressBarBackground {
  background-color: #404040;
  height: 4px;
  width: 100%;
  border-radius: 2px;
}

.progress {
  background-color: #808080 !important;
  height: 4px;
  width: 0;
  border-radius: 2px;
  margin: 0;
}

.albumArtwork {
  max-width: 70px;
  margin-right: 15px;
  float: left;
  background-size: cover;
}

.trackInfo {
  display: table;
  color: #fff;
}

.trackName {
  margin: 3px 0;
  display: inline-block;
  width: 100%;
}

.artistName {
  color: #a0a0a0;
}

.volumeBar {
  width: 180px;
  position: absolute;
  right: 0;
}

.volumeBar .progressBar {
  width: 125px;
}

#navBarContainer {
  position: fixed;
  top: 0;
  left: 0;
  width: 220px;
  height: 100vh;
  background-color: black;
  padding: 10px;
  display: flex;
  flex-direction: column;
}

nav {
  background-color: transparent;
}

.logo {
  text-align: center;
}

img {
  width: 100%;
}

.group {
  font-size: 16px;
  border-top: 2px solid #a0a0a0;
  height: 40px;
  margin-bottom: 25px;
}

.navItem {
  position: relative;
  display: block;
  letter-spacing: 1.5px;
  height: 40px;
}

a {
  color: #fff;
  transition: all .3s;
}

a:hover {
  color: #ddd;
}

.icon {
  position: absolute;
  right: 0;
  top: 15px;
  width: 25px;
}

#mainViewContainer {
  margin-left: 220px;
  margin-bottom: 90px;
  padding: 1px 10px;
}

.artwork {
  width: 100%;
}

.albumTitle {
  color: #fff;
  text-align: center;
  letter-spacing: 1px;
}

.pageHeading {
  color: #fff;
  text-align: center;
  margin: 15px;
}

.entityInfo {
  padding: 10px 0 10px 0;
  display: inline-block;
  width: 100%;
}

.leftSection {
  width: 30%;
  float: left;
  max-width: 250px;
}

.rightSection {
  width: 70%;
  float: left;
  padding: 5px 10px 5px 40px;
}

.rightSection p {
  color: #939393;
  font-weight: 200;
}

.artistName {
  color: #fff;
}

.artistName:hover {
  text-decoration: underline;
  cursor: pointer;
}

.play-white {
  width: 20px;
  visibility: hidden;
  position: absolute;
  cursor: pointer;
}

.optionsButton {
  width: 30px;
  visibility: hidden;
  padding-left: 10px;
}

.tracklistRow {
  padding: 10px 20px 40px 20px;
}

.tracklistRow:hover {
  background-color: #282828;
}

.tracklistRow:hover .play-white {
  visibility: visible;
}

.tracklistRow:hover .optionsButton {
  visibility: visible;
}

.tracklistRow:hover .trackNumber {
  visibility: hidden;
}

.trackCount {
  width: 8%;
  float: left;
}

.trackName {
  margin: 0;
}

.trackOptions {
  width: 5%;
  float: right;
  text-align: center;
}

.trackDuration {
  width: 12%;
  float: left;
  text-align: right;
}

